# cxx.mbt

./: .gitignore  CMakeLists.txt  Makefile  design_guideline.md  main.cxx  moonbit_cxx.h  moonbit_cxx_borrow.h  moonbit_cxx_borrow_interface.h
src/: moon.pkg.json  top.mbt
stub/: main.cxx  stub.cxx
